# noor

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
configs/: cyton_default.yaml  cyton_headset_19el_8ch_ssvep.yaml  layer2_default.yaml  layer2_fast_demo.yaml  layer2_headset_19el_8ch_ssvep.yaml  layer2_minimal.yaml  layer3_default.yaml
experiments/: __init__.py
experiments/ssvep_ml/: PROTOCOL.md  README.md  __init__.py  build_dataset.py  eeg_cnn.py  eval.py  features.py  inference_wrapper.py  joint_session.py  pilot_qc.py  schedule.py  stimulus_lsl_markers.py  train.py
layer1_acquisition/: __init__.py  __main__.py  acquisition.py  config.py  impedance.py  logging_config.py  lsl_outlet.py  raw_eeg_file_logger.py
layer2_processing/: __init__.py  __main__.py  config.py  logging_config.py  lsl_inlet.py  pipeline.py  preprocessing.py  smoothing.py  snr.py
layer3_backend/: __init__.py  __main__.py  config.py  confirmation.py  elevenlabs_tts.py  layer2_bridge.py  server.py
layer3_backend/static/: app.js  (+2 more)
scripts/: synthetic_signal_model.py  synthetic_ssvep_source.py  verify_layer2_output.py  verify_lsl_stream.py
tests/: test_acquisition_synthetic.py  test_acquisition_total_samples.py  test_config.py  test_confirmation.py  test_factory.py  test_fbcca.py  test_impedance.py  test_layer2_config.py  test_layer2_e2e.py  test_layer3_bridge.py  test_layer3_config.py  test_layer3_server.py  test_lsl_outlet.py  test_outputs.py  test_pipeline_adaptive_decision.py  test_pipeline_minimal.py  test_preprocessing.py  test_raw_eeg_file_logger.py  test_smoothing.py  test_snr.py  test_ssvep_ml_build_dataset.py  test_ssvep_ml_pilot_qc.py  test_ssvep_ml_schedule.py  test_ssvep_ml_train_smoke.py  test_synthetic_ssvep_model.py
(+25 files in other folders)
