[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuron"
version = "0.2.0"
description = "SSVEP-BCI AR/VR system — Layer 1 (acquisition) + Layer 2 (signal processing)"
requires-python = ">=3.11"
dependencies = [
    "brainflow~=5.14",
    "pylsl~=1.16",
    "pyyaml~=6.0",
    "numpy~=1.26",
    "scipy~=1.13",
    "scikit-learn~=1.4",
    "mne~=1.7",
    "python-osc~=1.8",
    "websockets~=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["layer1_acquisition*", "layer2_processing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
